--- a/BlogAPI.WebAPI/appsettings.json
+++ b/BlogAPI.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogConnection": "Data Source=DESKTOP-M9L4136\\SQLEXPRESS;Initial Catalog=BlogAPIDatabase;Integrated Security=True;MultipleActiveResultSets=true;Trust Server Certificate=True"
+  }
 }
