Create JwtService for generating Jwt token

--- a/BlogAPI.WebAPI/appsettings.json
+++ b/BlogAPI.WebAPI/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BlogConnection": "Data Source=DESKTOP-M9L4136\\SQLEXPRESS;Initial Catalog=BlogAPIDatabase;Integrated Security=True;MultipleActiveResultSets=true;Trust Server Certificate=True"
-  }
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5298",
+    "Audience": "http://localhost:5298",
+    "EXPIRATION_MINUTES": 10,
+    "Key": "this is secret key for jwt authentication bearer" 
+  }  
 }
