--- a/BlogAPI.Core/BlogAPI.Core.csproj
+++ b/BlogAPI.Core/BlogAPI.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\Comment\" />
+  </ItemGroup>
+
 </Project>
