Add some logs and Configure Serilog

--- a/BlogAPI.WebAPI/appsettings.json
+++ b/BlogAPI.WebAPI/appsettings.json
@@ -13,6 +13,17 @@
     "Issuer": "http://localhost:5298",
     "Audience": "http://localhost:5298",
     "EXPIRATION_MINUTES": 10,
-    "Key": "this is secret key for jwt authentication bearer" 
-  }  
+    "Key": "this is secret key for jwt authentication bearer"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ]
+  } 
 }
