--- a/BlogAPI.WebAPI/BlogAPI.WebAPI.csproj
+++ b/BlogAPI.WebAPI/BlogAPI.WebAPI.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.1" />
   </ItemGroup>
 
