--- a/BlogAPI.WebAPI/appsettings.json
+++ b/BlogAPI.WebAPI/appsettings.json
@@ -18,12 +18,31 @@
   "Serilog": {
     "MinimumLevel": "Information",
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.MSSqlServer"
+      //"Serilog.Sinks.File"
     ],
     "WriteTo": [
       {
         "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=DESKTOP-M9L4136\\SQLEXPRESS;Initial Catalog=BlogAPILogs;Integrated Security=True;MultipleActiveResultSets=true;Trust Server Certificate=True",
+          "tableName": "logs",
+          "autoCreateSqlTable": true
+        }
       }
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "logs/log.txt",
+      //    "rollingInterval": "Hour",
+      //    "fileSizeLimitBytes": 1048576,
+      //    "rollOnFileSizeLimit": true
+      //  }
+      //}
     ]
   } 
 }
